date-title flex-box

--- a/index.html
+++ b/index.html
@@ -133,11 +133,14 @@
         <article class="tour-card">
           <div class="tour-img-container">
             <img src="./images/tour-1.jpeg" class="tour-img" alt="" />
-            <p class="tour-date">august 26th, 2020</p>
+            <p class="tour-date">august 6th, 2022</p>
           </div>
           <!-- tour info -->
           <div class="tour-info">
-            <h4>tibet adventure</h4>
+            <div class="tour-title">
+              <h4>olumo adventure</h4>
+              <p>3 days</p>
+            </div>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Id
               deleniti sapiente earum recusandae laborum ab eligendi repellat
@@ -147,11 +150,10 @@
               <p>
                 <span>
                   <i class="fas fa-map"></i>
-                  china
+                  abeokuta
                 </span>
               </p>
-              <p>6 days</p>
-              <p>from $2100</p>
+              <p>from #10,000</p>
             </div>
           </div>
         </article>
@@ -160,11 +162,14 @@
         <article class="tour-card">
           <div class="tour-img-container">
             <img src="./images/tour-2.jpeg" class="tour-img" alt="" />
-            <p class="tour-date">october 1th, 2020</p>
+            <p class="tour-date">october 2nd, 2022</p>
           </div>
           <!-- tour info -->
           <div class="tour-info">
-            <h4>best of java</h4>
+            <div class="tour-title">
+              <h4>ilaji serenity</h4>
+              <p>4 days</p>
+            </div>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Id
               deleniti sapiente earum recusandae laborum ab eligendi repellat
@@ -174,11 +179,10 @@
               <p>
                 <span>
                   <i class="fas fa-map"></i>
-                  indonesia
+                  akanran
                 </span>
               </p>
-              <p>11 days</p>
-              <p>from $1400</p>
+              <p>from #30,000</p>
             </div>
           </div>
         </article>
@@ -187,11 +191,14 @@
         <article class="tour-card">
           <div class="tour-img-container">
             <img src="./images/tour-3.jpeg" class="tour-img" alt="" />
-            <p class="tour-date">september 15th, 2020</p>
+            <p class="tour-date">november 13th, 2022</p>
           </div>
           <!-- tour info -->
           <div class="tour-info">
-            <h4>explore hong kong</h4>
+            <div class="tour-title">
+              <h4>explore Lagos island</h4>
+              <p>5 days</p>
+            </div>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Id
               deleniti sapiente earum recusandae laborum ab eligendi repellat
@@ -201,11 +208,10 @@
               <p>
                 <span>
                   <i class="fas fa-map"></i>
-                  hong kong
+                  lagos
                 </span>
               </p>
-              <p>8 days</p>
-              <p>from $5000</p>
+              <p>from #35,000</p>
             </div>
           </div>
         </article>
@@ -214,11 +220,14 @@
         <article class="tour-card">
           <div class="tour-img-container">
             <img src="./images/tour-4.jpeg" class="tour-img" alt="" />
-            <p class="tour-date">december 5th, 2020</p>
+            <p class="tour-date">december 5th, 2022</p>
           </div>
           <!-- tour info -->
           <div class="tour-info">
-            <h4>kenya highlights</h4>
+            <div class="tour-title">
+              <h4>kenya highlight</h4>
+              <p>4 days</p>
+            </div>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Id
               deleniti sapiente earum recusandae laborum ab eligendi repellat
@@ -231,8 +240,7 @@
                   kenya
                 </span>
               </p>
-              <p>20 days</p>
-              <p>from $3300</p>
+              <p>from #750,000</p>
             </div>
           </div>
         </article>
