--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Backroads || Tour Company</title>
+    <title>Blitz || Tour Company</title>
     <!-- favicon -->
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
     <!-- font-awesome -->
@@ -19,6 +19,72 @@
     <!-- header  -->
     <header id="home">
       <!-- navbar -->
+      <nav class="navbar">
+        <div class="nav-center">
+          <!-- nav header  -->
+          <div class="nav-header">
+            <img src="./images/logo.svg" alt="" class="nav-logo" />
+            <button type="button" class="nav-toggle" id="nav-toggle">
+              <i class="fas fa-bars"></i>
+            </button>
+          </div>
+          <!-- end of nav-header  -->
+          <!-- nav links  -->
+          <ul class="nav-links" id="nav-links">
+            <!-- single link  -->
+            <li>
+              <a href="#home" class="nav-link scroll-link">home</a>
+            </li>
+            <!-- end of single link  -->
+            <!-- single link  -->
+            <li>
+              <a href="#about" class="nav-link scroll-link">about</a>
+            </li>
+            <!-- end of single link  -->
+            <!-- single link  -->
+            <li>
+              <a href="#services" class="nav-link scroll-link">services</a>
+            </li>
+            <!-- end of single link  -->
+            <!-- single link  -->
+            <li>
+              <a href="#featured" class="nav-link scroll-link">featured</a>
+            </li>
+            <!-- end of single link  -->
+            <!-- single link  -->
+            <li>
+              <a href="#gallery" class="nav-link scroll-link">gallery</a>
+            </li>
+            <!-- end of single link  -->
+          </ul>
+          <!-- end of nav links  -->
+          <!-- nav icons  -->
+          <ul class="nav-icons">
+            <!-- single icon  -->
+            <li>
+              <a href="https://www.facebook.com" target="_blank" class="nav-icon">
+                <i class="fab fa-facebook"></i>
+              </a>
+            </li>
+            <!-- end of single icon  -->
+            <!-- single icon  -->
+            <li>
+              <a href="https://www.twitter.com" target="_blank" class="nav-icon">
+                <i class="fab fa-twitter"></i>
+              </a>
+            </li>
+            <!-- end of single icon  -->
+            <!-- single icon  -->
+            <li>
+              <a href="https://www.squarespace.com" target="_blank" class="nav-icon">
+                <i class="fab fa-squarespace"></i>
+              </a>
+            </li>
+            <!-- end of single icon  -->
+          </ul>
+          <!--end of nav icons  -->
+        </div>
+      </nav>
       <!-- hero -->
       <div class="hero">
         <div class="hero-banner">
@@ -253,13 +319,166 @@
     <!-- end of featured tours -->
 
     <!-- contact -->
+    <section class="section contact" id="contact">
+      <div class="section-center contact-center">
+        <!-- contact title  -->
+        <article class="contact-title">
+          <h3>want latest tour info and updates?</h3>
+          <p>
+            Sign up for newsletter and stay up to date on our various tour
+            packages
+          </p>
+        </article>
+        <!-- contact form  -->
+        <form
+          action="https://formspree.io/f/xlezqlpq"
+          method="POST"
+          class="contact-form"
+        >
+          <input
+            type="email"
+            name="email"
+            class="form-control"
+            placeholder="your email"
+          />
+          <button type="submit" class="btn-submit">submit</button>
+        </form>
+      </div>
+    </section>
     <!-- end of contact -->
 
     <!-- gallery  -->
+    <section id="gallery">
+      <div class="gallery-center">
+        <!-- single-item  -->
+        <article class="gallery-img-container">
+          <img src="./images/tour-1.jpeg" class="gallery-img" alt="" />
+          <a href="#" class="gallery-icon">
+            <i class="fas fa-search"></i>
+          </a>
+        </article>
+        <!-- end of single-item  -->
+        <!-- single-item  -->
+        <article class="gallery-img-container">
+          <img src="./images/tour-2.jpeg" class="gallery-img" alt="" />
+          <a href="#" class="gallery-icon">
+            <i class="fas fa-search"></i>
+          </a>
+        </article>
+        <!-- end of single-item  -->
+        <!-- single-item  -->
+        <article class="gallery-img-container">
+          <img src="./images/tour-3.jpeg" class="gallery-img" alt="" />
+          <a href="#" class="gallery-icon">
+            <i class="fas fa-search"></i>
+          </a>
+        </article>
+        <!-- end of single-item  -->
+        <!-- single-item  -->
+        <article class="gallery-img-container">
+          <img src="./images/tour-4.jpeg" class="gallery-img" alt="" />
+          <a href="#" class="gallery-icon">
+            <i class="fas fa-search"></i>
+          </a>
+        </article>
+        <!-- end of single-item  -->
+        <!-- single-item  -->
+        <article class="gallery-img-container">
+          <img src="./images/tour-5.jpeg" class="gallery-img" alt="" />
+          <a href="#" class="gallery-icon">
+            <i class="fas fa-search"></i>
+          </a>
+        </article>
+        <!-- end of single-item  -->
+        <!-- single-item  -->
+        <article class="gallery-img-container">
+          <img src="./images/tour-6.jpeg" class="gallery-img" alt="" />
+          <a href="#" class="gallery-icon">
+            <i class="fas fa-search"></i>
+          </a>
+        </article>
+        <!-- end of single-item  -->
+        <!-- single-item  -->
+        <article class="gallery-img-container">
+          <img src="./images/tour-1.jpeg" class="gallery-img" alt="" />
+          <a href="#" class="gallery-icon">
+            <i class="fas fa-search"></i>
+          </a>
+        </article>
+        <!-- end of single-item  -->
+        <!-- single-item  -->
+        <article class="gallery-img-container">
+          <img src="./images/tour-2.jpeg" class="gallery-img" alt="" />
+          <a href="#" class="gallery-icon">
+            <i class="fas fa-search"></i>
+          </a>
+        </article>
+        <!-- end of single-item  -->
+      </div>
+    </section>
     <!-- end of gallery  -->
 
     <!-- footer -->
-
+    <footer class="section footer">
+      <!-- footer links  -->
+      <ul class="footer-links">
+        <!-- single link  -->
+        <li>
+          <a href="#home" class="footer-link scroll-link">home</a>
+        </li>
+        <!-- end of single link  -->
+        <!-- single link  -->
+        <li>
+          <a href="#about" class="footer-link scroll-link">about</a>
+        </li>
+        <!-- end of single link  -->
+        <!-- single link  -->
+        <li>
+          <a href="#services" class="footer-link scroll-link">services</a>
+        </li>
+        <!-- end of single link  -->
+        <!-- single link  -->
+        <li>
+          <a href="#featured" class="footer-link scroll-link">featured</a>
+        </li>
+        <!-- end of single link  -->
+        <!-- single link  -->
+        <li>
+          <a href="#gallery" class="footer-link scroll-link">gallery</a>
+        </li>
+        <!-- end of single link  -->
+      </ul>
+      <!-- end of footer links  -->
+      <!-- footer icons  -->
+      <ul class="footer-icons">
+        <!-- single icon  -->
+        <li>
+          <a href="https://www.facebook.com" target="_blank" class="footer-icon">
+            <i class="fab fa-facebook"></i>
+          </a>
+        </li>
+        <!-- end of single icon  -->
+        <!-- single icon  -->
+        <li>
+          <a href="https://www.twitter.com" target="_blank" class="footer-icon">
+            <i class="fab fa-twitter"></i>
+          </a>
+        </li>
+        <!-- end of single icon  -->
+        <!-- single icon  -->
+        <li>
+          <a href="https://www.squarespace.com" target="_blank" class="footer-icon">
+            <i class="fab fa-squarespace"></i>
+          </a>
+        </li>
+        <!-- end of single icon  -->
+      </ul>
+      <!--end of footer icons  -->
+      <p class="copyright">
+        copyright &copy; blitz travel tour company <span id="date"></span>. all
+        rights reserved
+      </p>
+    </footer>
     <!-- js -->
     <script src="./js/app.js"></script>
   </body>
